@@ -79,25 +79,6 @@ test_main(void);
 
 extern int verbose;
 
-/* FIXME: When interface stabilizes, move to nettle-meta.h */
-struct nettle_mac
-{
-  const char *name;
-
-  /* Size of the context struct */
-  unsigned context_size;
-
-  /* Size of digests */
-  unsigned digest_size;
-
-  /* Suggested key size; other sizes are sometimes possible. */
-  unsigned key_size;
-  
-  nettle_set_key_func *set_key;
-  nettle_hash_update_func *update;
-  nettle_hash_digest_func *digest;
-};
-
 #define _NETTLE_HMAC(name, NAME, keysize) {	\
   #name,					\
   sizeof(struct hmac_##name##_ctx),		\
