@@ -1,3 +1,8 @@
+2020-02-09  Niels Möller  <nisse@lysator.liu.se>
+
+	* nettle-meta.h (struct nettle_mac): New public struct,
+	* testsuite/testutils.h: ...moved from this file.
+
 2020-02-06  Niels Möller  <nisse@lysator.liu.se>
 
 	From Dmitry Baryshkov:
